{
    "name": "Player",
    "maps": [
        {
            "name": "PlayerMain",
            "id": "9df00dee-8fc2-4cd4-b06c-f72c6e0e4416",
            "actions": [
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "84cac8ef-1bf2-43f1-9c51-7233e32ee874",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Look",
                    "type": "Value",
                    "id": "ce401043-2014-4003-9090-c44d768e5e94",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9a132fb8-1329-417b-bba8-b1108b68176d",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9411040a-bd04-41b5-b99e-e6a27d7175d8",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0b3e5c49-4f50-431f-9835-86e297b24a0a",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}